externals/tecio/teciosrc/TECIO.h

EXTERNC tecio_API int32_t tecTextBoxGetColor(
    void*    fileHandle,
    int32_t  text,
    int32_t* boxColor);
EXTERNC tecio_API int32_t tecTextBoxGetFillColor(
    void*    fileHandle,
    int32_t  text,
    int32_t* boxFillColor);
EXTERNC tecio_API int32_t tecTextBoxGetLineThickness(
    void*   fileHandle,
    int32_t text,
    double* boxLineThickness);
EXTERNC tecio_API int32_t tecTextBoxGetMargin(
    void*   fileHandle,
    int32_t text,
    double* boxMargin);
EXTERNC tecio_API int32_t tecTextBoxGetType(
    void*    fileHandle,
    int32_t  text,
    int32_t* boxType);
EXTERNC tecio_API int32_t tecTextGetAnchor(
    void*    fileHandle,
    int32_t  text,
    int32_t* anchor);
EXTERNC tecio_API int32_t tecTextGetAnchorPos(
    void*   fileHandle,
    int32_t text,
    double* x,
    double* y,
    double* z);
EXTERNC tecio_API int32_t tecTextGetAngle(
    void*   fileHandle,
    int32_t text,
    double* angle);
EXTERNC tecio_API int32_t tecTextGetClipping(
    void*    fileHandle,
    int32_t  text,
    int32_t* clipping);
EXTERNC tecio_API int32_t tecTextGetColor(
    void*    fileHandle,
    int32_t  text,
    int32_t* color);
EXTERNC tecio_API int32_t tecTextGetCoordMode(
    void*    fileHandle,
    int32_t  text,
    int32_t* coordMode);
EXTERNC tecio_API int32_t tecTextGetHeight(
    void*   fileHandle,
    int32_t text,
    double* height);
EXTERNC tecio_API int32_t tecTextGetLineSpacing(
    void*   fileHandle,
    int32_t text,
    double* lineSpacing);
EXTERNC tecio_API int32_t tecTextGetMacroFunctionCmd(
    void*   fileHandle,
    int32_t text,
    char**  macroFunctionCmd);
EXTERNC tecio_API int32_t tecTextGetNumTexts(
    void*    fileHandle,
    int32_t* numTexts);
EXTERNC tecio_API int32_t tecTextGetScope(
    void*    fileHandle,
    int32_t  text,
    int32_t* scope);
EXTERNC tecio_API int32_t tecTextGetSizeUnits(
    void*    fileHandle,
    int32_t  text,
    int32_t* sizeUnits);
EXTERNC tecio_API int32_t tecTextGetString(
    void*   fileHandle,
    int32_t text,
    char**  string);
EXTERNC tecio_API int32_t tecTextGetTypeface(
    void*   fileHandle,
    int32_t text,
    char**  typeface);
EXTERNC tecio_API int32_t tecTextGetZone(
    void*    fileHandle,
    int32_t  text,
    int32_t* zone);
EXTERNC tecio_API int32_t tecTextIsAttached(
    void*    fileHandle,
    int32_t  text,
    int32_t* isAttached);
EXTERNC tecio_API int32_t tecTextIsBold(
    void*    fileHandle,
    int32_t  text,
    int32_t* isBold);
EXTERNC tecio_API int32_t tecTextIsItalic(
    void*    fileHandle,
    int32_t  text,
    int32_t* isItalic);
EXTERNC tecio_API int32_t tecVarAuxDataGetItem(
    void*   fileHandle,
    int32_t var,
    int32_t whichItem,
    char**  name,
    char**  value);
EXTERNC tecio_API int32_t tecVarAuxDataGetNumItems(
    void*    fileHandle,
    int32_t  var,
    int32_t* numItems);
EXTERNC tecio_API int32_t tecVarGetName(
    void*   fileHandle,
    int32_t var,
    char**  name);
EXTERNC tecio_API int32_t tecVarIsEnabled(
    void*    fileHandle,
    int32_t  var,
    int32_t* isEnabled);
EXTERNC tecio_API int32_t tecZoneAuxDataGetItem(
    void*   fileHandle,
    int32_t zone,
    int32_t whichItem,
    char**  name,
    char**  value);
EXTERNC tecio_API int32_t tecZoneAuxDataGetNumItems(
    void*    fileHandle,
    int32_t  zone,
    int32_t* numItems);
EXTERNC tecio_API int32_t tecZoneConnectivityGetSharedZone(
    void*    fileHandle,
    int32_t  zone,
    int32_t* sharedZone);
EXTERNC tecio_API int32_t tecZoneFaceNbrGetConnections(
    void*    fileHandle,
    int32_t  zone,
    int32_t* connections);
EXTERNC tecio_API int32_t tecZoneFaceNbrGetConnections64(
    void*    fileHandle,
    int32_t  zone,
    int64_t* connections);