externals/tecio/teciosrc/tecio.f90


integer(c_int32_t) function tecTextBoxGetColor( &
  fileHandle, &
  text, &
  boxColor) &
  bind (c, name="tecTextBoxGetColor")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: boxColor
end function tecTextBoxGetColor

integer(c_int32_t) function tecTextBoxGetFillColor( &
  fileHandle, &
  text, &
  boxFillColor) &
  bind (c, name="tecTextBoxGetFillColor")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: boxFillColor
end function tecTextBoxGetFillColor

integer(c_int32_t) function tecTextBoxGetLineThickness( &
  fileHandle, &
  text, &
  boxLineThickness) &
  bind (c, name="tecTextBoxGetLineThickness")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  real(c_double), intent(out)           :: boxLineThickness
end function tecTextBoxGetLineThickness

integer(c_int32_t) function tecTextBoxGetMargin( &
  fileHandle, &
  text, &
  boxMargin) &
  bind (c, name="tecTextBoxGetMargin")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  real(c_double), intent(out)           :: boxMargin
end function tecTextBoxGetMargin

integer(c_int32_t) function tecTextBoxGetType( &
  fileHandle, &
  text, &
  boxType) &
  bind (c, name="tecTextBoxGetType")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: boxType
end function tecTextBoxGetType

integer(c_int32_t) function tecTextGetAnchor( &
  fileHandle, &
  text, &
  anchor) &
  bind (c, name="tecTextGetAnchor")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: anchor
end function tecTextGetAnchor

integer(c_int32_t) function tecTextGetAnchorPos( &
  fileHandle, &
  text, &
  x, &
  y, &
  z) &
  bind (c, name="tecTextGetAnchorPos")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  real(c_double), intent(out)           :: x
  real(c_double), intent(out)           :: y
  real(c_double), intent(out)           :: z
end function tecTextGetAnchorPos

integer(c_int32_t) function tecTextGetAngle( &
  fileHandle, &
  text, &
  angle) &
  bind (c, name="tecTextGetAngle")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  real(c_double), intent(out)           :: angle
end function tecTextGetAngle

integer(c_int32_t) function tecTextGetClipping( &
  fileHandle, &
  text, &
  clipping) &
  bind (c, name="tecTextGetClipping")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: clipping
end function tecTextGetClipping

integer(c_int32_t) function tecTextGetColor( &
  fileHandle, &
  text, &
  color) &
  bind (c, name="tecTextGetColor")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: color
end function tecTextGetColor

integer(c_int32_t) function tecTextGetCoordMode( &
  fileHandle, &
  text, &
  coordMode) &
  bind (c, name="tecTextGetCoordMode")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: coordMode
end function tecTextGetCoordMode

integer(c_int32_t) function tecTextGetHeight( &
  fileHandle, &
  text, &
  height) &
  bind (c, name="tecTextGetHeight")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  real(c_double), intent(out)           :: height
end function tecTextGetHeight

integer(c_int32_t) function tecTextGetLineSpacing( &
  fileHandle, &
  text, &
  lineSpacing) &
  bind (c, name="tecTextGetLineSpacing")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  real(c_double), intent(out)           :: lineSpacing
end function tecTextGetLineSpacing

integer(c_int32_t) function tecTextGetMacroFunctionCmd( &
  fileHandle, &
  text, &
  macroFunctionCmd) &
  bind (c, name="tecTextGetMacroFunctionCmd")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  type(c_ptr), intent(out)              :: macroFunctionCmd
end function tecTextGetMacroFunctionCmd

integer(c_int32_t) function tecTextGetNumTexts( &
  fileHandle, &
  numTexts) &
  bind (c, name="tecTextGetNumTexts")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)  :: fileHandle
  integer(c_int32_t), intent(out) :: numTexts
end function tecTextGetNumTexts

integer(c_int32_t) function tecTextGetScope( &
  fileHandle, &
  text, &
  scope) &
  bind (c, name="tecTextGetScope")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: scope
end function tecTextGetScope

integer(c_int32_t) function tecTextGetSizeUnits( &
  fileHandle, &
  text, &
  sizeUnits) &
  bind (c, name="tecTextGetSizeUnits")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: sizeUnits
end function tecTextGetSizeUnits

integer(c_int32_t) function tecTextGetString( &
  fileHandle, &
  text, &
  string) &
  bind (c, name="tecTextGetString")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  type(c_ptr), intent(out)              :: string
end function tecTextGetString

integer(c_int32_t) function tecTextGetTypeface( &
  fileHandle, &
  text, &
  typeface) &
  bind (c, name="tecTextGetTypeface")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  type(c_ptr), intent(out)              :: typeface
end function tecTextGetTypeface

integer(c_int32_t) function tecTextGetZone( &
  fileHandle, &
  text, &
  zone) &
  bind (c, name="tecTextGetZone")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: zone
end function tecTextGetZone

integer(c_int32_t) function tecTextIsAttached( &
  fileHandle, &
  text, &
  isAttached) &
  bind (c, name="tecTextIsAttached")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: isAttached
end function tecTextIsAttached

integer(c_int32_t) function tecTextIsBold( &
  fileHandle, &
  text, &
  isBold) &
  bind (c, name="tecTextIsBold")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: isBold
end function tecTextIsBold

integer(c_int32_t) function tecTextIsItalic( &
  fileHandle, &
  text, &
  isItalic) &
  bind (c, name="tecTextIsItalic")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: text
  integer(c_int32_t), intent(out)       :: isItalic
end function tecTextIsItalic

integer(c_int32_t) function tecVarAuxDataGetItem( &
  fileHandle, &
  var, &
  whichItem, &
  name, &
  value) &
  bind (c, name="tecVarAuxDataGetItem")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: var
  integer(c_int32_t), value, intent(in) :: whichItem
  type(c_ptr), intent(out)              :: name
  type(c_ptr), intent(out)              :: value
end function tecVarAuxDataGetItem

integer(c_int32_t) function tecVarAuxDataGetNumItems( &
  fileHandle, &
  var, &
  numItems) &
  bind (c, name="tecVarAuxDataGetNumItems")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: var
  integer(c_int32_t), intent(out)       :: numItems
end function tecVarAuxDataGetNumItems

integer(c_int32_t) function tecVarGetName( &
  fileHandle, &
  var, &
  name) &
  bind (c, name="tecVarGetName")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: var
  type(c_ptr), intent(out)              :: name
end function tecVarGetName

integer(c_int32_t) function tecVarIsEnabled( &
  fileHandle, &
  var, &
  isEnabled) &
  bind (c, name="tecVarIsEnabled")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: var
  integer(c_int32_t), intent(out)       :: isEnabled
end function tecVarIsEnabled

integer(c_int32_t) function tecZoneAuxDataGetItem( &
  fileHandle, &
  zone, &
  whichItem, &
  name, &
  value) &
  bind (c, name="tecZoneAuxDataGetItem")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), value, intent(in) :: whichItem
  type(c_ptr), intent(out)              :: name
  type(c_ptr), intent(out)              :: value
end function tecZoneAuxDataGetItem

integer(c_int32_t) function tecZoneAuxDataGetNumItems( &
  fileHandle, &
  zone, &
  numItems) &
  bind (c, name="tecZoneAuxDataGetNumItems")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: numItems
end function tecZoneAuxDataGetNumItems

integer(c_int32_t) function tecZoneConnectivityGetSharedZone( &
  fileHandle, &
  zone, &
  sharedZone) &
  bind (c, name="tecZoneConnectivityGetSharedZone")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in) :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out) :: sharedZone
end function tecZoneConnectivityGetSharedZone

integer(c_int32_t) function tecZoneFaceNbrGetConnections( &
  fileHandle, &
  zone, &
  connections) &
  bind (c, name="tecZoneFaceNbrGetConnections")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: connections(*)
end function tecZoneFaceNbrGetConnections

integer(c_int32_t) function tecZoneFaceNbrGetConnections64( &
  fileHandle, &
  zone, &
  connections) &
  bind (c, name="tecZoneFaceNbrGetConnections64")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: connections(*)
end function tecZoneFaceNbrGetConnections64
